# obsidian-in-a-vat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/scripts/: changelog-info.sh
.github/workflows/: docker-publish.yml  release.yml  test.yml
example_vault/: README.md  tags.yaml
example_vault/.brain/: clusters.json  graph.json  review-log.json
example_vault/.obsidian/: workspace.json
example_vault/captures/: 2026-01-10-083000-spaced-repetition-improves-long-term.md  2026-01-12-074500-capture-everything-process-later-principle.md  2026-01-14-120000-obsidian-plugin-ecosystem-is-powerful.md  2026-01-15-142000-active-recall-beats-passive-review.md  2026-01-18-110000-chain-of-thought-prompting-explained.md  2026-01-20-063000-deep-work-requires-deliberate-environment.md  2026-01-22-091500-integrating-srs-into-daily-workflow.md  2026-01-25-103000-zettelkasten-atomic-notes-principle.md  2026-02-01-164500-system-prompts-set-llm-behavior.md  2026-02-03-190000-linking-notes-creates-emergent-structure.md  2026-02-05-112000-progressive-summarization-for-note-processing.md  2026-02-08-130000-ai-pair-programming-changes-development.md  2026-02-10-080000-few-shot-examples-improve-output.md  2026-02-12-173000-graph-databases-model-knowledge-naturally.md  2026-02-14-103000-context-window-limits-shape-ai.md  2026-02-18-080000-separate-drafting-from-editing-phases.md  2026-02-22-154500-test-driven-development-with-ai.md  2026-02-25-210000-sleep-quality-affects-cognitive-performance.md  2026-02-28-090000-markdown-is-the-universal-note.md  2026-03-02-140000-outline-first-then-fill-in.md  2026-03-05-093000-digital-gardens-versus-traditional-blogs.md  2026-03-08-100000-side-projects-need-clear-revenue.md  2026-03-10-114500-incremental-reading-for-research-papers.md  2026-03-12-163000-validate-ideas-before-building-full.md  2026-03-15-081500-api-design-should-follow-conventions.md
example_vault/notes/: effective-llm-prompt-patterns.md  spaced-repetition-for-knowledge-workers.md  zettelkasten-core-principles.md
example_vault/templates/: capture.md  note.md  topic.md
scripts/: seed_example_vault.py
src/vault_mcp/: __main__.py  server.py
src/vault_mcp/adapters/: base.py  local.py
tests/: conftest.py  test_graph_engine.py  test_topic.py  test_vault_promote.py
vault-mcp/: .env.example  README.md  pyproject.toml
(+11 files in other folders)
