[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-in-a-vat-mcp"
version = "0.3.11"
description = "Personal knowledge vault MCP server for Claude Desktop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "obsidian", "knowledge-base", "claude", "vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]",
    "python-frontmatter",
    "pydantic>=2.0",
    "python-dotenv",
    "pyyaml",
    "networkx>=3.0",
    "python-louvain>=0.16",
]

[project.urls]
Homepage = "https://github.com/oliverxuzy-ai/obsidian-in-a-vat"
Repository = "https://github.com/oliverxuzy-ai/obsidian-in-a-vat"
Issues = "https://github.com/oliverxuzy-ai/obsidian-in-a-vat/issues"

[project.scripts]
vault-mcp = "vault_mcp.server:main"
obsidian-in-a-vat-mcp = "vault_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
